[package]
name = "mqtt-lab"
version = "0.1.0"
authors = ["zifeng <zifeng.1024@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "mqtt-broker"
path = "src/broker/server.rs"

[[bin]]
name = "mqtt-client-rumqttc"
path = "src/client/client_rumqttc.rs"

[dependencies]
tokio = { version = "1.6.0", features = ["full"] }
rumqttc = "0.6.0"
log = "0.4.14"
log4rs = "1.0.0"
