[package]
name = "tokio-codec"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.15.0", features = ["full"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
tokio-stream = "0.1.8"
bytes = "1.1.0"
futures = "0.3.19"