[package]
name = "tokio-lab"
version = "0.1.0"
authors = ["zifeng <zifeng.1024@qq.com>"]
edition = "2018"

[[bin]]
name = "helloworld"
path = "src/redis/main.rs"

[[bin]]
name = "async-demo"
path = "src/async/main.rs"

[[bin]]
name = "spawning"
path = "src/spawning/main.rs"

[[bin]]
name = "shared-state"
path = "src/sharedstate/main.rs"

[[bin]]
name = "channel"
path = "src/channels/main.rs"

[[bin]]
name = "async-io"
path = "src/async-io/main.rs"

[[bin]]
name = "demo"
path = "src/demo/main.rs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3", features = ["full"] }
mini-redis = "0.3"
bytes = "0.6"
