[package]
name = "tokio-modbus-lab"
version = "0.1.0"
authors = ["zifeng <zifeng.1024@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.5.0", features = ["full"] }
tokio-modbus = { version = "0.4", features = ["tcp", "tcp-server-unstable"] }
futures = "0.3.14"
anyhow = "1.0.40"
