[package]
name = "wasmtime-lab"
version = "0.1.0"
authors = ["zifeng <zifeng.1024@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "wat"
path = "src/wat/main.rs"

[[bin]]
name = "importer"
path = "src/importer/main.rs"

[dependencies]
wasmtime = "0.20.0"
anyhow = "1.0.33"
